--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<script src="vendor/codemirror-2.3/mode/xml/xml.js"></script>
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
 
-	<script src="vendor/xmlToJson.js"></script>
+	<script src="js/evaluator-android-xml.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
