add phone UI wrapper

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!--<link rel="stylesheet" href="lib/codemirror-2.3/mode/javascript/javascript.css">
 	<link rel="stylesheet" href="lib/codemirror-2.3/mode/xml/xml.css">-->
 	<link rel="stylesheet" href="vendor/codemirror-ui/codemirror-ui.css" type="text/css" media="screen" />
-	
+
 	<link rel="stylesheet" href="css/editor.css">
 	<link rel="stylesheet" href="css/android-layout.css">
 
@@ -20,7 +20,9 @@
 	</div>
 
 	<div class="output-area">
-		<div class="screen"></div>
+		<div class="phone">
+			<div class="screen"></div>
+		</div>
 	</div>
 
 	<script src="vendor/jquery.min.js"></script>
