code saving and restoring (localStorage)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 	
+	<p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
 	<div class="input-area">
 		
 	</div>
