display errors from basic error checking

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	</div>
 
 	<div class="output-area">
+		<div class="error-msg">Errors go here</div>
 		<div class="phone">
 			<div class="screen"></div>
 		</div>
