hide page until load

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/android-layout.css">
 
 </head>
-<body>
+<body style="display:none;">
 	
 	<p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
 	<div class="input-area">
