added list of valid color values

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<script src="vendor/codemirror-2.3/mode/xml/xml.js"></script>
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
 
+	<script src="js/evaluator-android-xml-constants.js"></script>
 	<script src="js/evaluator-android-xml.js"></script>
 	<script src="js/app.js"></script>
 </body>
