--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	</div>
 
 	<script src="vendor/jquery.min.js"></script>
+	<script src="vendor/webfont.js"></script>
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/mode/javascript/javascript.js"></script>
