--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
 </head>
 <body style="display:none;">
+
+	<div class="layout-options">
+		<input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label>
+	</div>
 	
 	<p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
 	<div class="input-area">
@@ -33,6 +37,7 @@
 
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/webfont.js"></script>
+	<script src="vendor/html2canvas.js"></script>
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/mode/javascript/javascript.js"></script>
