error service, invalid tag checking

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 	<script src="js/evaluator-android-xml-constants.js"></script>
 	<script src="js/evaluator-android-xml.js"></script>
+	<script src="js/error-service.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
