remove duplicate layout calls, clean up logging
laying out will only happen when all fonts load successfully

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="output-area">
-		<div class="error-msg">Errors go here</div>
+		<div class="error-msg"></div>
 		<div class="phone">
 
 		</div>
