--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 
 </head>
-<body style="display:none;">
+<body>
 
 	<div class="layout-options">
 		<input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label>
@@ -29,11 +29,10 @@
 	<div class="output-area">
 		<div class="error-msg"></div>
 		<div class="phone">
-
+			<div class="screen"></div>
 		</div>
 	</div>
 
-	<div class="screen"></div>
 
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/webfont.js"></script>
