--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
 
 	<script src="js/evaluator-android-xml-constants.js"></script>
+	<script src="js/evaluator-android-xml-code-examples.js"></script>
 	<script src="js/evaluator-android-xml.js"></script>
 	<script src="js/error-service.js"></script>
 	<script src="js/app.js"></script>
