reset code to default button

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 <body>
 
 	<div class="layout-options">
-		<input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label>
+		<div class="link link-reset-code">Reset Code</div>
+		<!-- <input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label> -->
 	</div>
 	
-	<p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
+	<p class="code-saved-msg">
+		Code has <span class="not-word">not</span> been saved
+	</p>
 	<div class="input-area">
 		
 	</div>
