add test cases at #/test/and

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 		</div>
 	</div>
 
+	<img class="test-reference-image" src="">
+
 
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/webfont.js"></script>
