vendor prefixes (old browsers and safari)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" href="css/editor.css">
 	<link rel="stylesheet" href="css/android-layout.css">
 
-<link href='http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
+	<script src="vendor/prefixfree.min.js"></script>
 
 </head>
 <body>
