undo/redo buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
 
 	<div class="layout-options">
-		<div class="link link-reset-code">Reset Code</div>
+		<span class="link link-reset-code">Reset Code</span>
+		<span class="link link-undo">Undo</span>
+		<span class="link link-redo">Redo</span>
 		<!-- <input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label> -->
 	</div>
 	
