material design via bootstrap-material-design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
+    <link href="bower_components/bootstrap-material-design/dist/css/roboto.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap-material-design/dist/css/material.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
+
 	<link rel="stylesheet" href="vendor/codemirror-2.3/lib/codemirror.css">
 	<!--<link rel="stylesheet" href="lib/codemirror-2.3/mode/javascript/javascript.css">
 	<link rel="stylesheet" href="lib/codemirror-2.3/mode/xml/xml.css">-->
@@ -17,30 +24,52 @@
 
 </head>
 <body>
+	
+	<div class="row">
+		<div class="col-xs-8">
+			<div class="panel panel-primary">
+			    <div class="panel-heading">
+			        <h3 class="panel-title">XML Layout Code</h3>
+			    </div>
+			    <div class="panel-body">
+				    <ul class="nav nav-pills">
+				        <li><a href="javascript:void(0)" class="btn btn-default btn-undo">Undo</a></li>
+				        <li><a href="javascript:void(0)" class="btn btn-default btn-redo">Redo</a></li>
+				        <li><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
+				        <li><a href="javascript:void(0)" class="btn btn-default btn-reset-code">Reset Code</a></li>
+				    </ul>
+
+			        <div class="input-area">
+			        	
+			        </div>
+			    </div>
+			</div>
+		</div>
+		<div class="col-xs-4">
+			<div class="output-area">
+		        <div class="phone">
+		        	<div class="screen"></div>
+		        </div>
+			</div>
+		</div>
+	</div>
 
 	<div class="layout-options">
-		<span class="link link-reset-code">Reset Code</span>
-		<span class="link link-undo">Undo</span>
-		<span class="link link-redo">Redo</span>
+		
+		
+		
 		<!-- <input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label> -->
 	</div>
 	
 	<p class="code-saved-msg">
 		Code has <span class="not-word">not</span> been saved
 	</p>
-	<div class="input-area">
+	
+
+	<div class="error-msg"></div>
 		
-	</div>
-
-	<div class="output-area">
-		<div class="error-msg"></div>
-		<div class="phone">
-			<div class="screen"></div>
-		</div>
-	</div>
-
 	<img class="test-reference-image" src="">
-
+	<a href="javascript:void(0)" class="btn btn-default">Default</a>
 
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/webfont.js"></script>
@@ -55,5 +84,19 @@
 	<script src="js/evaluator-android-xml.js"></script>
 	<script src="js/error-service.js"></script>
 	<script src="js/app.js"></script>
+
+		<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<script src="bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
+	<script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+
+        <script>
+            $(document).ready(function() {
+                // This command is used to initialize some elements and make them work properly
+                $.material.init();
+            });
+        </script>
+
+
 </body>
 </html>
