--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
 	
 	<div class="row">
-		<div class="col-xs-8">
-			<div class="panel panel-primary">
+		<div class="col-sm-7 col-md-8">
+			<div class="panel panel-primary input-area-wrapper">
 			    <div class="panel-heading">
 			        <h3 class="panel-title">XML Layout Code</h3>
 			    </div>
@@ -35,18 +35,22 @@
 				    <ul class="nav nav-pills">
 				        <li><a href="javascript:void(0)" class="btn btn-default btn-undo">Undo</a></li>
 				        <li><a href="javascript:void(0)" class="btn btn-default btn-redo">Redo</a></li>
-				        <li><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
-				        <li><a href="javascript:void(0)" class="btn btn-default btn-reset-code">Reset Code</a></li>
+				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
 				    </ul>
 
 			        <div class="input-area">
 			        	
 			        </div>
 			    </div>
+			    <p class="code-saved-msg">
+			    	Code has <span class="not-word">not</span> been saved
+				    <a href="javascript:void(0)" class="btn btn-link btn-reset-code">Reset Code</a>
+			    </p>
+
 			</div>
 		</div>
-		<div class="col-xs-4">
-			<div class="output-area">
+		<div class="col-sm-5 col-md-4">
+			<div class="output-area-wrapper">
 		        <div class="phone">
 		        	<div class="screen"></div>
 		        </div>
@@ -61,15 +65,12 @@
 		<!-- <input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label> -->
 	</div>
 	
-	<p class="code-saved-msg">
-		Code has <span class="not-word">not</span> been saved
-	</p>
 	
 
 	<div class="error-msg"></div>
 		
 	<img class="test-reference-image" src="">
-	<a href="javascript:void(0)" class="btn btn-default">Default</a>
+	
 
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/webfont.js"></script>
