UI moving things around

--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
 				    <ul class="nav nav-pills">
 				        <li><a href="javascript:void(0)" class="btn btn-default btn-undo">Undo</a></li>
 				        <li><a href="javascript:void(0)" class="btn btn-default btn-redo">Redo</a></li>
+				        <li>
+			        	    <p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
+				        </li>
 				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
 				    </ul>
 
 			        <div class="input-area">
 			        	
 			        </div>
-			    </div>
-			    <p class="code-saved-msg">
-			    	Code has <span class="not-word">not</span> been saved
-				    <a href="javascript:void(0)" class="btn btn-link btn-reset-code">Reset Code</a>
-			    </p>
 
+					<div class="error-msg"></div>
+
+					<ul class="nav nav-pills">
+					    <li><a href="javascript:void(0)" class="btn btn-link btn-reset-code">Reset Code</a></li>
+				    </ul>
+			    </div>
+			    
 			</div>
 		</div>
 		<div class="col-sm-5 col-md-4">
@@ -66,8 +71,6 @@
 	</div>
 	
 	
-
-	<div class="error-msg"></div>
 		
 	<img class="test-reference-image" src="">
 	
