--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	
 	<div class="row">
-		<div class="col-sm-7 col-md-8">
+		<div class="col-xs-7 col-md-8">
 			<div class="panel panel-primary input-area-wrapper">
 			    <div class="panel-heading">
 			        <h3 class="panel-title">XML Layout Code</h3>
@@ -54,7 +54,7 @@
 			    
 			</div>
 		</div>
-		<div class="col-sm-5 col-md-4">
+		<div class="col-xs-5 col-md-4">
 			<div class="output-area-wrapper">
 		        <div class="phone">
 		        	<div class="screen"></div>
