--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<img class="test-reference-image" src="">
 	
 
-	<script src="vendor/jquery.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="vendor/webfont.js"></script>
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
@@ -89,7 +89,6 @@
 	<script src="js/error-service.js"></script>
 	<script src="js/app.js"></script>
 
-		<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
 	<script src="bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
