less scary UI for errors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				        <li>
 			        	    <p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
 				        </li>
-				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
+					    <li class="pull-right"><a href="javascript:void(0)" class="btn btn-link btn-reset-code">Reset Code</a></li>
 				    </ul>
 
 			        <div class="input-area">
@@ -48,7 +48,8 @@
 					<div class="error-msg"></div>
 
 					<ul class="nav nav-pills">
-					    <li><a href="javascript:void(0)" class="btn btn-link btn-reset-code">Reset Code</a></li>
+				        <li class=""><a href="javascript:void(0)" class="btn btn-default btn-available-images">Available Images</a></li>
+				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
 				    </ul>
 			    </div>
 			    
