--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/mode/javascript/javascript.js"></script>
-	<script src="vendor/codemirror-2.3/mode/xml/xml.js"></script>
+	<script src="vendor/codemirror-2.3/mode/android-xml/android-xml.js"></script>
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
 
 	<script src="js/evaluator-android-xml-constants.js"></script>
