cheat sheet is two words

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 					<ul class="nav nav-pills">
 				        <li class=""><a href="javascript:void(0)" class="btn btn-default btn-available-images">Available Images</a></li>
-				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheatsheet</a></li>
+				        <li class="pull-right"><a href="javascript:void(0)" class="btn btn-default btn-cheatsheet">Cheat Sheet</a></li>
 				    </ul>
 			    </div>
 			    
