--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 	<script src="vendor/codemirror-2.3/mode/android-xml/android-xml.js"></script>
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
 
+	<script src="js/utilities.js"></script>
+	
 	<script src="js/evaluator-android-xml-constants.js"></script>
 	<script src="js/evaluator-android-xml-code-examples.js"></script>
 	<script src="js/evaluator-android-xml.js"></script>
