available image visuals

--- a/index.html
+++ b/index.html
@@ -72,20 +72,52 @@
 				</div>
 				<div class="modal-body">
 					<p>The following images are available to you:</p>
-					<ul>
-						<li>@drawable/android</li>
-						<li>@drawable/cake</li>
-						<li>@drawable/cakesmall</li>
-						<li>@drawable/fish</li>
-						<li>@drawable/mountains</li>
-						<li>@drawable/ocean</li>
-						<li>@drawable/rocks</li>
-						<li>@drawable/water</li>
-						<li>@drawable/xmas</li>
-					</ul>
+					<div class="row">
+						<div class="col-xs-6">
+							<ul class="image-asset-list">
+								<li class="image-asset" style="background-image: url(images/fish.jpg);">
+									<div class="image-asset-name">@drawable/fish</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/mountains.jpg);">
+									<div class="image-asset-name">@drawable/mountains</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/rocks.jpg);">
+									<div class="image-asset-name">@drawable/rocks</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/cake.jpg);">
+									<div class="image-asset-name">@drawable/cake</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/android.jpg);">
+									<div class="image-asset-name">@drawable/android</div>
+								</li>
+							</ul>
+						</div>
+						<div class="col-xs-6">
+							<ul class="image-asset-list">
+								<li class="image-asset" style="background-image: url(images/ocean.jpg);">
+									<div class="image-asset-name">@drawable/ocean</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/xmas.jpg);">
+									<div class="image-asset-name">@drawable/xmas</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/water.jpg);">
+									<div class="image-asset-name">@drawable/water</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/cakesmall.jpg);">
+									<div class="image-asset-name">@drawable/cakesmall</div>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-primary" data-dismiss="modal">Dismiss</button>
+					<div class="col-sm-9 text-left">
+						<p>Thanks to <a href="https://www.flickr.com/photos/romainguy/with/16974639801/">Romain Guy</a> for the use of his images.<br>
+						<em>Images are <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons (BY-NC-SA 2.0)</a></em></p>
+					</div>
+					<div class="col-sm-3">
+						<button class="btn btn-primary" data-dismiss="modal">Dismiss</button>
+					</div>
 				</div>
 			</div>
 		</div>
