tweak image-asset-list styling

--- a/index.html
+++ b/index.html
@@ -75,33 +75,30 @@
 					<div class="row">
 						<div class="col-xs-6">
 							<ul class="image-asset-list">
+								<li class="image-asset" style="background-image: url(images/water.jpg);">
+									<div class="image-asset-name">@drawable/water<br>@drawable/ocean</div>
+								</li>
 								<li class="image-asset" style="background-image: url(images/fish.jpg);">
 									<div class="image-asset-name">@drawable/fish</div>
 								</li>
+								<li class="image-asset" style="background-image: url(images/android.jpg);">
+									<div class="image-asset-name">@drawable/android</div>
+								</li>
+								<li class="image-asset" style="background-image: url(images/cake.jpg);">
+									<div class="image-asset-name">@drawable/cake</div>
+								</li>
+							</ul>
+						</div>
+						<div class="col-xs-6">
+							<ul class="image-asset-list">
 								<li class="image-asset" style="background-image: url(images/mountains.jpg);">
 									<div class="image-asset-name">@drawable/mountains</div>
 								</li>
 								<li class="image-asset" style="background-image: url(images/rocks.jpg);">
 									<div class="image-asset-name">@drawable/rocks</div>
 								</li>
-								<li class="image-asset" style="background-image: url(images/cake.jpg);">
-									<div class="image-asset-name">@drawable/cake</div>
-								</li>
-								<li class="image-asset" style="background-image: url(images/android.jpg);">
-									<div class="image-asset-name">@drawable/android</div>
-								</li>
-							</ul>
-						</div>
-						<div class="col-xs-6">
-							<ul class="image-asset-list">
-								<li class="image-asset" style="background-image: url(images/ocean.jpg);">
-									<div class="image-asset-name">@drawable/ocean</div>
-								</li>
 								<li class="image-asset" style="background-image: url(images/xmas.jpg);">
 									<div class="image-asset-name">@drawable/xmas</div>
-								</li>
-								<li class="image-asset" style="background-image: url(images/water.jpg);">
-									<div class="image-asset-name">@drawable/water</div>
 								</li>
 								<li class="image-asset" style="background-image: url(images/cakesmall.jpg);">
 									<div class="image-asset-name">@drawable/cakesmall</div>
