--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			        <h3 class="panel-title">XML Layout Code</h3>
 			    </div>
 			    <div class="panel-body">
-				    <ul class="nav nav-pills">
+				    <ul id="input-topbar" class="nav nav-pills">
 				        <li><button class="btn btn-default btn-undo">Undo</button></li>
 				        <li><button class="btn btn-default btn-redo">Redo</button></li>
 				        <li>
