--- a/index.html
+++ b/index.html
@@ -76,14 +76,11 @@
 					<div class="row">
 						<div class="col-xs-6">
 							<ul class="image-asset-list">
-								<li class="image-asset" style="background-image: url(images/water.jpg);">
-									<div class="image-asset-name">@drawable/water<br>@drawable/ocean</div>
+								<li class="image-asset" style="background-image: url(images/ocean.jpg);">
+									<div class="image-asset-name">@drawable/ocean</div>
 								</li>
 								<li class="image-asset" style="background-image: url(images/fish.jpg);">
 									<div class="image-asset-name">@drawable/fish</div>
-								</li>
-								<li class="image-asset" style="background-image: url(images/android.jpg);">
-									<div class="image-asset-name">@drawable/android</div>
 								</li>
 								<li class="image-asset" style="background-image: url(images/cake.jpg);">
 									<div class="image-asset-name">@drawable/cake</div>
@@ -97,9 +94,6 @@
 								</li>
 								<li class="image-asset" style="background-image: url(images/rocks.jpg);">
 									<div class="image-asset-name">@drawable/rocks</div>
-								</li>
-								<li class="image-asset" style="background-image: url(images/xmas.jpg);">
-									<div class="image-asset-name">@drawable/xmas</div>
 								</li>
 								<li class="image-asset" style="background-image: url(images/cakesmall.jpg);">
 									<div class="image-asset-name">@drawable/cakesmall</div>
