--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/mode/android-xml/android-xml.js"></script>
 	<script src="vendor/codemirror-ui/codemirror-ui.js" type="text/javascript"></script>
+	<script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
 
 	<script src="js/utilities.js"></script>
+	<script src="js/data-store.js"></script>
 	
 	<script src="js/evaluator-android-xml-constants.js"></script>
 	<script src="js/evaluator-android-xml-code-examples.js"></script>
