implement auth for diff-reader

--- a/diff-reader.html
+++ b/diff-reader.html
@@ -8,6 +8,14 @@
 	<pre id="output"></pre>
 	<hr>
 	<pre id="log" style="font: 16px monospace;"></pre>
+
+
+
+	<script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
+
+	<script src="js/utilities.js"></script>
+	<script src="js/data-store.js"></script>
+	
 	<script src="js/diff-reader.js"></script>
 </body>
 </html>
