add android image back

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 								<li class="image-asset" style="background-image: url(images/cake.jpg);">
 									<div class="image-asset-name">@drawable/cake</div>
 								</li>
+								<li class="image-asset" style="background-image: url(images/android.jpg);">
+									<div class="image-asset-name">@drawable/android</div>
+								</li>
 							</ul>
 						</div>
 						<div class="col-xs-6">
