add tablet mode ui tweaks

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 	<div class="wrapper">
 		<div class="row">
-			<div class="col-xs-7 col-md-8">
+			<div class="col-xs-7 col-md-8 input-area-col">
 				<div class="panel panel-primary input-area-wrapper">
 				    <div class="panel-heading">
 				        <h3 class="panel-title">XML Layout Code</h3>
@@ -56,7 +56,7 @@
 				    
 				</div>
 			</div>
-			<div class="col-xs-5 col-md-4">
+			<div class="col-xs-5 col-md-4 output-area-col">
 				<div class="output-area-wrapper">
 			        <div class="phone">
 			        	<div class="screen"></div>
