--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 	<script src="vendor/modernizr.min.js"></script>
+	<script>
+	if (navigator.userAgent.indexOf('MSIE') !== -1 || navigator.appVersion.indexOf('Trident/') > 0) {
+		document.documentElement.classList.add('ie');
+		console.log(document.documentElement.className);
+	}
+	</script>
 	<script src="vendor/prefixfree.min.js"></script>
 
 </head>
@@ -141,29 +147,24 @@
 			    	<h3>We're sorry, your browser is not supported</h3>
 			    	<p>Please use an up-to-date version of a modern browser<p>
 			    	<div class="row">
-			    		<div class="col-sm-2 col-sm-offset-1">
+			    		<div class="col-xs-6 col-sm-3">
 			    			<a href="https://www.google.com/intl/en/chrome/browser/desktop/index.html" class="browser-link btn">
 			    				<img src="images/browser-icons/chrome_24x24.png" alt="Chrome">Chrome
 		    				</a>
 			    		</div>
-			    		<div class="col-sm-2">
+			    		<div class="col-xs-6 col-sm-3">
 			    			<a href="https://www.mozilla.org/en-US/firefox/new/" class="browser-link btn">
 			    				<img src="images/browser-icons/firefox_24x24.png" alt="Firefox">Firefox
 		    				</a>
 			    		</div>
-			    		<div class="col-sm-2">
+			    		<div class="col-xs-6 col-sm-3">
 			    			<a href="https://support.apple.com/downloads/#safari" class="browser-link btn">
 			    				<img src="images/browser-icons/safari_24x24.png" alt="Safari">Safari
 		    				</a>
 			    		</div>
-			    		<div class="col-sm-2">
+			    		<div class="col-xs-6 col-sm-3">
 			    			<a href="http://www.opera.com/" class="browser-link btn">
 			    				<img src="images/browser-icons/opera_24x24.png" alt="Opera">Opera
-		    				</a>
-			    		</div>
-			    		<div class="col-sm-2">
-			    			<a href="http://windows.microsoft.com/en-us/internet-explorer/ie-11-worldwide-languages" class="browser-link btn">
-			    				<img src="images/browser-icons/internet-explorer_24x24.png" alt="IE 11">IE 11
 		    				</a>
 			    		</div>
 			    	</div>
