improve unsupported browser button layout

--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
 			    	<h3>We're sorry, your browser is not supported</h3>
 			    	<p>Please use an up-to-date version of a modern browser<p>
 			    	<div class="row">
-			    		<div class="col-xs-6 col-sm-3">
+			    		<div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-2">
 			    			<a href="https://www.google.com/intl/en/chrome/browser/desktop/index.html" class="browser-link btn">
 			    				<img src="images/browser-icons/chrome_24x24.png" alt="Chrome">Chrome
 		    				</a>
 			    		</div>
-			    		<div class="col-xs-6 col-sm-3">
+			    		<div class="col-xs-6 col-sm-3 col-md-2">
 			    			<a href="https://www.mozilla.org/en-US/firefox/new/" class="browser-link btn">
 			    				<img src="images/browser-icons/firefox_24x24.png" alt="Firefox">Firefox
 		    				</a>
 			    		</div>
-			    		<div class="col-xs-6 col-sm-3">
+			    		<div class="col-xs-6 col-sm-3 col-md-2">
 			    			<a href="https://support.apple.com/downloads/#safari" class="browser-link btn">
 			    				<img src="images/browser-icons/safari_24x24.png" alt="Safari">Safari
 		    				</a>
 			    		</div>
-			    		<div class="col-xs-6 col-sm-3">
+			    		<div class="col-xs-6 col-sm-3 col-md-2">
 			    			<a href="http://www.opera.com/" class="browser-link btn">
 			    				<img src="images/browser-icons/opera_24x24.png" alt="Opera">Opera
 		    				</a>
