--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 	</div>
 
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 	<script src="vendor/webfont.js"></script>
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
