--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	
 						<ul class="nav nav-pills">
 					        <li><button class="btn btn-default btn-available-images" data-toggle="modal" data-target="#images-dialog">Available Images</button></li>
+					        <li><button class="btn btn-default btn-report-issue" data-toggle="modal" data-target="#issue-dialog">Report Issue</button></li>
 					        <li class="pull-right"><button class="btn btn-default btn-cheatsheet">Cheat Sheet</button></li>
 					    </ul>
 				    </div>
@@ -70,7 +71,93 @@
 				</div>
 			</div>
 		</div>
-	
+		
+		<div id="issue-dialog" class="modal fade">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					<h4 class="modal-title">Available Images</h4>
+				</div>
+				<div class="modal-body">
+					<script type="text/javascript">var submitted=false;</script>
+					<iframe name="hidden_iframe" id="hidden_iframe"
+					style="display:none;" onload="if(submitted)
+					{ alert('Thank you for reporting the bug to us!'); $('#issue-dialog').modal('hide'); }"></iframe>
+					<form action="https://docs.google.com/a/knowlabs.com/forms/d/1XDuFxeFRO0_yaFm-4RSQEqJT2G8fTNih0KoRMJycF_4/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
+					<div class="ss-form-question errorbox-good" role="listitem">
+					<div dir="ltr" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
+					<label class="ss-q-item-label" for="entry_446623266"><div class="ss-q-title">Please describe the issue
+					<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+					<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+					<div class="ss-q-help ss-secondary-text" dir="ltr">Please include instructions describing how to reproduce the issue.</div></label>
+					<textarea name="entry.446623266" rows="8" cols="0" class="ss-q-long" id="entry_446623266" dir="auto" aria-label="Please describe the issue Please include instructions describing how to reproduce the issue. " aria-required="true" required=""></textarea>
+					<div class="error-message" id="1327007809_errorMessage"></div>
+					<div class="required-message">This is a required question</div>
+					</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+					<div dir="ltr" class="ss-item  ss-paragraph-text"><div class="ss-form-entry">
+					<label class="ss-q-item-label" for="entry_440939498"><div class="ss-q-title">Code
+					</div>
+					<div class="ss-q-help ss-secondary-text" dir="ltr">Paste any XML code here</div></label>
+					<textarea name="entry.440939498" rows="8" cols="0" class="ss-q-long" id="entry_440939498" dir="auto" aria-label="Code Paste any XML code here "></textarea>
+					<div class="error-message" id="1818637790_errorMessage"></div>
+					<div class="required-message">This is a required question</div>
+					</div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+					<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
+					<label class="ss-q-item-label" for="entry_1899499144"><div class="ss-q-title">Priority
+					<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+					<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+					<div class="ss-q-help ss-secondary-text" dir="ltr">How big of a problem is this issue for you and other students?</div></label>
+
+					<ul class="ss-choices" role="radiogroup" aria-label="Priority How big of a problem is this issue for you and other students? "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.379941968" value="Meh" id="group_379941968_1" role="radio" class="ss-q-radio" aria-label="Meh" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Meh</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.379941968" value="Not a big problem" id="group_379941968_2" role="radio" class="ss-q-radio" aria-label="Not a big problem" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Not a big problem</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.379941968" value="A big problem" id="group_379941968_3" role="radio" class="ss-q-radio" aria-label="A big problem" required="" aria-required="true"></span>
+					<span class="ss-choice-label">A big problem</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.379941968" value="OMG So Huge!!" id="group_379941968_4" role="radio" class="ss-q-radio" aria-label="OMG So Huge!!" required="" aria-required="true"></span>
+					<span class="ss-choice-label">OMG So Huge!!</span>
+					</label></li></ul>
+					<div class="error-message" id="1899499144_errorMessage"></div>
+					<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+					<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
+					<label class="ss-q-item-label" for="entry_267480158"><div class="ss-q-title">Frequency
+					<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+					<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+					<div class="ss-q-help ss-secondary-text" dir="ltr">How likely is it that others will run into this issue?</div></label>
+
+					<ul class="ss-choices" role="radiogroup" aria-label="Frequency How likely is it that others will run into this issue? "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1572993629" value="Very Unlikely" id="group_1572993629_1" role="radio" class="ss-q-radio" aria-label="Very Unlikely" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Very Unlikely</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1572993629" value="Unlikely" id="group_1572993629_2" role="radio" class="ss-q-radio" aria-label="Unlikely" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Unlikely</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1572993629" value="Likely" id="group_1572993629_3" role="radio" class="ss-q-radio" aria-label="Likely" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Likely</span>
+					</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1572993629" value="Very Likely" id="group_1572993629_4" role="radio" class="ss-q-radio" aria-label="Very Likely" required="" aria-required="true"></span>
+					<span class="ss-choice-label">Very Likely</span>
+					</label></li></ul>
+					<div class="error-message" id="267480158_errorMessage"></div>
+					<div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+					<div dir="ltr" class="ss-item  ss-text"><div class="ss-form-entry">
+					<label class="ss-q-item-label" for="entry_1934743275"><div class="ss-q-title">Unique ID
+					</div>
+					<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+					<input type="text" name="entry.1934743275" value="" class="ss-q-short" id="entry_1934743275" dir="auto" aria-label="Unique ID  " title="">
+					<div class="error-message" id="772761895_errorMessage"></div>
+					<div class="required-message">This is a required question</div>
+					</div></div></div>
+					<input type="hidden" name="draftResponse" value="[,,&quot;2362144712679293198&quot;]
+					">
+					<input type="hidden" name="pageHistory" value="0">
+
+
+					<input type="hidden" name="fbzx" value="2362144712679293198">
+
+					<div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
+					<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+					<div class="ss-password-warning ss-secondary-text">Never submit passwords through Google Forms.</div></td>
+					</tr></tbody></table></div></ol></form>
+				</div>
+			</div>
+		</div>
 		<div id="images-dialog" class="modal fade" tabindex="-1">
 			<div class="modal-dialog">
 				<div class="modal-content">
