fix conflict between Google Fonts and prefixfree

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
-	<link href="bower_components/bootstrap-material-design/dist/css/roboto.min.css" rel="stylesheet">
+	<link href="bower_components/bootstrap-material-design/dist/css/roboto.min.css" rel="stylesheet" data-noprefix>
 	<link href="bower_components/bootstrap-material-design/dist/css/material.min.css" rel="stylesheet">
 	<link href="bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
 
@@ -19,7 +19,6 @@
 	<link rel="stylesheet" href="css/editor.css">
 	<link rel="stylesheet" href="css/android-layout.css">
 
-	<link href='http://fonts.googleapis.com/css?family=Roboto:500,900italic,900,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 	<script src="vendor/modernizr.min.js"></script>
 	<script>
 	if (navigator.userAgent.indexOf('MSIE') !== -1 || navigator.appVersion.indexOf('Trident/') > 0) {
@@ -276,7 +275,7 @@
 
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-	<script src="vendor/webfont.js"></script>
+	<script src="js/webfont.modified.js"></script>
 	<script src="vendor/codemirror-2.3/lib/codemirror.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/lib/util/searchcursor.js" type="text/javascript"></script>
 	<script src="vendor/codemirror-2.3/mode/android-xml/android-xml.js"></script>
