--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 							<li>
 								<p class="code-saved-msg">Code has <span class="not-word">not</span> been saved</p>
 							</li>
-							<li class="pull-right"><button class="btn btn-link btn-reset-code">Reset Code</button></li>
+							<li class="pull-right"><button class="btn btn-default btn-reset-code">Reset Code</button></li>
 						</ul>
-	
+
 						<div class="input-area">
-							
+
 						</div>
-	
+
 						<div class="error-msg"></div>
-	
+
 						<ul class="nav nav-pills">
 							<li><button class="btn btn-default btn-available-images" data-toggle="modal" data-target="#images-dialog">Available Images</button></li>
 							<li><button class="btn btn-default btn-report-issue" data-toggle="modal" data-target="#issue-dialog">Report Issue</button></li>
 							<li class="pull-right"><a href="https://s3-us-west-1.amazonaws.com/udacity-content/PDFs/Common+Android+Views+Cheat+Sheet+(1).pdf" class="btn btn-default btn-cheatsheet" target="_blank">Cheat Sheet</a></li>
 						</ul>
 					</div>
-					
+
 				</div>
 			</div>
 			<div class="col-xs-5 col-md-4 output-area-col">
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 
 		<div class="modal fade" id="issue-submitted-dialog">
 			<div class="modal-dialog">
@@ -224,16 +224,16 @@
 				</div>
 			</div>
 		</div>
-	
+
 		<div class="layout-options">
-			
-			
-			
+
+
+
 			<!-- <input type="checkbox" id="toggle-element-outline"><label for="toggle-element-outline">Toggle Element Outline</label> -->
 		</div>
-		
-		
-			
+
+
+
 		<img class="test-reference-image" src="">
 	</div>
 
@@ -285,7 +285,7 @@
 	<script src="js/diffEngine.js"></script>
 
 	<script src="js/utilities.js"></script>
-	
+
 	<script src="js/evaluator-android-xml-constants.js"></script>
 	<script src="js/evaluator-android-xml-code-examples.js"></script>
 	<script src="js/evaluator-android-xml.js"></script>
