move redirect to run before page load

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 		document.documentElement.classList.add('ie');
 		console.log(document.documentElement.className);
 	}
-	</script>
+
+  // users who visit udacity's github pages should be redirected to the official path
+  if (location.host === 'udacity.github.io') {
+    location.href = 'http://labs.udacity.com/android-visualizer/' + location.hash;
+  }
+  </script>
 	<script src="vendor/prefixfree.min.js"></script>
 
 </head>
