--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<ul class="nav nav-pills">
 							<li><button class="btn btn-default btn-available-images" data-toggle="modal" data-target="#images-dialog">Available Images</button></li>
 							<li><button class="btn btn-default btn-report-issue" data-toggle="modal" data-target="#issue-dialog">Report Issue</button></li>
-							<li class="pull-right"><a href="https://s3-us-west-1.amazonaws.com/udacity-content/PDFs/Common+Android+Views+Cheat+Sheet+(1).pdf" class="btn btn-default btn-cheatsheet" target="_blank">Cheat Sheet</a></li>
+							<li class="pull-right"><a href="https://drive.google.com/file/d/0B5XIkMkayHgRMVljUVIyZzNmQUU/view" class="btn btn-default btn-cheatsheet" target="_blank">Cheat Sheet</a></li>
 						</ul>
 					</div>
 
